# Gab_metrics

./: README.md  example.m
libsrvf/: CMakeLists.txt  Doxyfile  README.md
libsrvf/include/srvf/: c_api.h  dpnbhd.h  exceptions.h  fileio.h  functions.h  interp.h  kdtree.h  matchselect.h  matrix.h  minmaxheap.h  numeric.h  opencurves.h  paretoset.h  partialmatch.h  plf.h  plot.h  plothelper.h  plotwin.h  point.h  pointset.h  qmap.h  render.h  reparam.h  rotate.h  rotselect.h  srvf.h  util.h
libsrvf/matlab/: Makefile  ismonotone.m  mex_helpers.h  plf_arclength.m  plf_compose.m  plf_constant_speed_reparam.m  plf_evaluate.m  plf_inverse.m  plf_preimages.m  plf_refine.m  plf_reparam_distance.m  plf_restrict.m  plf_sum.m  plf_to_srvf.m  plf_trans_to_origin.m  plot_gamma.m  plot_geodesic.m  plot_plf.m  plot_registration.m  plot_srvf.m  poly_arclength_params.m  poly_resample.m  poly_to_plf.m  srvf_covariance.m  srvf_dp_aboptimal_reparam.m  srvf_dp_abprod.m  srvf_dp_l2prod.m  srvf_dp_optimal_reparam.m  srvf_evaluate.m  srvf_fa_groupwise_reparam.cc  srvf_fa_karcher_mean.cc  srvf_fa_optimal_reparam.cc  srvf_gamma_action.m  srvf_geodesic.m  srvf_karcher_mean.cc  srvf_klr_abprod_gamma.m  srvf_klr_find_n_seg.m  srvf_klr_find_next_p_seg.m  srvf_klr_follow_n_seg.m  srvf_klr_follow_p_seg.m  (+19 more)
libsrvf/matlab/demos/: ages.mat  boys_rates.mat  srvf_fa_groupwise_reparam_demo.m  srvf_fa_optimal_reparam_demo.m  srvf_klr_demo.m
libsrvf/matlab/operatornew/: demo.m  demomex.cpp  license.txt  make.m  newdelete.cpp  newdelete.h
libsrvf/matlab/tests/: srvf_klr_find_n_seg_test.m
libsrvf/oct/: dp_grid.c  dp_grid.h  dp_mex.c
libsrvf/src/: CMakeLists.txt  c_api.cc  dpnbhd.cc  fileio.cc  functions.cc  interp.cc  matrix.cc  opencurves.cc  partialmatch.cc  plf.cc  qmap.cc  reparam.cc  rotate.cc  rotselect.cc  srvf.cc  util.cc
libsrvf/tests/: CMakeLists.txt  fileio_tests.cc  function_tests.cc  interp_tests.cc  kdtree_tests.cc  matrix_tests.cc  minmaxheap_tests.cc  numeric_tests.cc  opencurves_tests.cc  partialmatch_tests.cc  plf_tests.cc  point_tests.cc  pointset_tests.cc  qmap_tests.cc  render_tests.cc  reparam_tests.cc  rotate_tests.cc  srvf_tests.cc  util_tests.cc
(+45 files in other folders)
